@@ -1,3 +1,10 @@
+2018-03-28  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	* config/rs6000/xmmintrin.h (_mm_max_pi16): Use __vector __bool
+	instead of __vector bool.
+	(_mm_max_pu8): Likewise.
+	(_mm_min_pi16): Likewise.
+
 2018-03-28  Peter Bergner  <bergner@vnet.ibm.com>
 
 	PR target/84912
